--- a/devenv.yaml
+++ b/devenv.yaml
@@ -1,6 +1,6 @@
 inputs:
   nixpkgs:
-    url: github:nixos/nixpkgs
+    url: github:nixos/nixpkgs/nixos-unstable
   fenix:
     url: github:nix-community/fenix
     inputs:
