--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,25 +12,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Install nix
         uses: DeterminateSystems/nix-installer-action@v4
-      - name: Install cachix
-        uses: cachix/cachix-action@v12
-        with:
-          name: devenv
       - name: Install devenv.sh
         run: nix profile install --accept-flake-config github:cachix/devenv/latest
       - name: Setup nix cache
         uses: DeterminateSystems/magic-nix-cache-action@v2
-      - name: Setup cargo cache
-        uses: actions/cache@v3
-        continue-on-error: false
-        with:
-          path: |
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/ 
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
+      - name: Setup rust cache
+        uses: Swatinem/rust-cache@v2
       - name: Run pre-commit hooks
         run: |
           devenv shell pre-commit run --all-files
