--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Install nix
         uses: DeterminateSystems/nix-installer-action@v4
+      - uses: cachix/cachix-action@v12
+        with:
+          name: devenv
       - name: Install devenv.sh
-        run: nix profile install --accept-flake-config github:cachix/devenv/latest
+        run: nix profile install tarball+https://install.devenv.sh/latest
       - name: Setup nix cache
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Setup rust cache
@@ -22,4 +25,5 @@ jobs:
         run: |
           devenv shell pre-commit run --all-files
       - name: Test
-        run: devenv shell cargo nextest run
+        run: |
+          devenv shell cargo nextest run
