ci: use nix-community cachix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,7 @@ jobs:
         uses: DeterminateSystems/nix-installer-action@v8
       - uses: cachix/cachix-action@v13
         with:
-          name: devenv
-      - name: Install devenv.sh
-        run: nix profile install tarball+https://install.devenv.sh/latest
+          name: nix-community
       - name: Setup nix cache
         uses: DeterminateSystems/magic-nix-cache-action@v2
       - name: Setup rust cache
