--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
         uses: DeterminateSystems/nix-installer-action@v16
       - uses: cachix/cachix-action@v15
         with:
-          name: nix-community
-      - name: Setup nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@v9
+          name: pborzenkov
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+          extraPullNames: nix-community
       - name: Setup rust cache
         uses: Swatinem/rust-cache@v2
       - name: cargo fmt
