--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ anyhow = "1.0"
 argon2 = "0.5"
 axum = { version = "0.8", features = ["json", "macros", "tokio"] }
 clap = { version = "4.5", features = ["cargo", "derive"] }
-clap-verbosity-flag = "3.0"
-log = "0.4"
+clap-verbosity-flag = { version = "3.0", default-features = false, features = ["tracing"] }
 rand_core = { version = "0.6", features = ["getrandom"] }
 serde = { version = "1.0", features = ["derive", "std"] }
 sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
